random user api correction

--- a/random-user.html
+++ b/random-user.html
@@ -9,13 +9,21 @@
 
     <style>
         #user {
-            border: 1px solid slategrey;
-            width: 130px;
+            border: 1px solid lightgrey;
+            width: 240px;
+            padding: 20px;
+            box-shadow: 10px 10px 10px lightgray;
+            border-radius: 5px;
+            margin-left: 300px;
         }
 
         #user img {
             width: 100%;
             border-radius: 50%;
+        }
+
+        #user p {
+            color: gray;
         }
     </style>
 </head>
@@ -28,7 +36,7 @@
         <section id="user">
 
         </section>
-        <button onclick="loadUser()"> Load User</button>
+
     </main>
     <script src="js/random-user.js"></script>
 </body>
